--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -192,7 +192,7 @@
 
 
     <!-- <all-songs></all-songs> -->
-    <!-- <all-albums></all-albums> -->
+    <all-albums></all-albums>
     <!-- <artist></artist> -->
 
 
