--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,3 +1,4 @@
+
 <!-- ------------------------------left side bar start-- --------------------------->
 <div class="left-side sticky-left-side" tabindex="5000" style="overflow:hidden; outline: none">
         <!--logo and iconic logo start-->
@@ -5,7 +6,7 @@
             <h1><a href="#">Kakak!<span>c</span></a></h1>
         </div>
         <div class="logo-icon text-center">
-            <a href="#">K </a>
+            <a href="#">K  </a>
         </div>
         <!-- /w3l-agile -->
         <!--logo and iconic logo end-->
@@ -18,35 +19,21 @@
     
                 <li class="menu-list"><a routerLink="/allalbums"><i class="lnr lnr-indent-increase"></i> <span>All
                             Albums</span></a>
-                    <ul class="sub-menu-list">
-                        <li><a href="browse.html">Artists</a> </li>
-                        <li><a href="404.html">Services</a> </li>
-                    </ul>
                 </li>
-                <li><a href="radio.html"><i class="lnr lnr-users"></i> <span>Artists</span></a></li>
 
+                <li><a routerLink="/allartists"><i class="lnr lnr-users"></i> <span>Artists</span></a></li>
                 <li class="menu-list"><a routerLink="/favourites"><i class="lnr lnr-heart"></i> <span>My Favourities</span></a>
                     <ul class="sub-menu-list">
                         <li><a href="radio.html">All Songs</a></li>
                     </ul>
                 </li>
-                <li><a href="typography.html"><i class="lnr lnr-pencil"></i> <span>Feedback</span></a></li>
+                <li><a routerLink="/userdetails"><i class="lnr lnr-pencil"></i> <span>Feedback</span></a></li>
             </ul>
-           
             <!--sidebar nav end-->
         </div>
     </div>
     
     <!-- side bar enddd ----------------------------------------------------------------------------------------------------------   -->
-    
-    
-			<!-- header-starts -->
-			<div class="header-section">
-			<!--toggle button start-->
-			<a class="toggle-btn  menu-collapsed"><i class="fa fa-bars"></i></a>
-        </div>
-
-
 
 <div id="page-wrapper">
         <div class="inner-content">
