--- a/src/app/music/song-details/song-details.component.html
+++ b/src/app/music/song-details/song-details.component.html
@@ -1,51 +1,9 @@
-<!-- ------------------------------left side bar start-- --------------------------->
-<div class="left-side sticky-left-side" tabindex="5000" style="overflow:hidden; outline: none">
-        <!--logo and iconic logo start-->
-        <div class="logo">
-            <h1><a href="#">Kakak!<span>c</span></a></h1>
-        </div>
-        <div class="logo-icon text-center">
-            <a href="#">K </a>
-        </div>
-        <!-- /w3l-agile -->
-        <!--logo and iconic logo end-->
-        <div class="left-side-inner">
-            <!--sidebar nav start-->
-            <ul class="nav nav-pills nav-stacked custom-nav">
-                <li class="active"><a routerLink="/home"><i class="lnr lnr-home"></i><span>Home</span></a></li>
-    
-                <li><a routerLink="/allsongs"><i class="lnr lnr-music-note"></i> <span>All Sonsgs</span></a></li>
-    
-                <li class="menu-list"><a routerLink="/allalbums"><i class="lnr lnr-indent-increase"></i> <span>All
-                            Albums</span></a>
-                    <ul class="sub-menu-list">
-                        <li><a href="browse.html">Artists</a> </li>
-                        <li><a href="404.html">Services</a> </li>
-                    </ul>
-                </li>
-                <li><a href="radio.html"><i class="lnr lnr-users"></i> <span>Artists</span></a></li>
+<a routerLink="/allsongs" class="btn btn-secondary btn-sm">back</a>
+<a routerLink="/main" class="btn btn-secondary btn-sm">home</a>
 
-                <li class="menu-list"><a routerLink="/favourites"><i class="lnr lnr-heart"></i> <span>My Favourities</span></a>
-                    <ul class="sub-menu-list">
-                        <li><a href="radio.html">All Songs</a></li>
-                    </ul>
-                </li>
-                <li><a href="typography.html"><i class="lnr lnr-pencil"></i> <span>Feedback</span></a></li>
-            </ul>
-           
-            <!--sidebar nav end-->
-        </div>
-    </div>
-    
-    <!-- side bar enddd ----------------------------------------------------------------------------------------------------------   -->
-    
-    
-
-
-<!---------------------------------------------------------------------------------------------------------------------->
 <div  style="background-color: lightcyan">
-        <div class="container">
-                <h4 style="color:rgb(46, 15, 15);text-align:center; font-size: -webkit-xxx-large">
+        <div class="container" style="width: 85%;margin: 0 auto;">
+                <h4 style="color:rgb(46, 15, 15);text-align:center; font-size: -webkit-xxx-large; margin: 0">
                     Chanson
                 </h4>
             </div>
@@ -60,7 +18,7 @@
                         <div class="row">
                             <div class="col-md-6 text-center">
                                 <div class="text-center">
-                                    <img src="assets/images/v5.jpg" class="img-responsive" width="350px" height="110%">
+                                    <img src="{{song.songImage}}" class="img-responsive" width="350px" height="110%">
                                     <br><br>
             
                                 </div>
@@ -69,38 +27,22 @@
                                 <table class="table table-bordered">
                                     <tbody>
                                         <tr>
-                                            <td>Song Name</td>
-                                            <td>{{song.songName}}</td>
-            
-                                        </tr>
-                                        <tr>
                                             <td>Song Title</td>
-                                            <td>{{song.title}}</td>
+                                            <td>{{song.songTitle}}</td>
+            
                                         </tr>
                                         <tr>
                                             <td>Artist</td>
-                                            <td>
-                                                <span *ngFor="let artist of song.artist">
-                                                    {{artist.firstName}}{{artist.lastName}}
-                                                    <br>
-                                                </span>
-            
-                                            </td>
+                                            <td>{{ song.artistName }}</td>
                                         </tr>
                                         <tr>
-                                            <td>Song Category</td>
-                                            <td>{{song.category}}</td>
-                                        </tr>
-            
-                                        <tr>
-                                            <td>Rating</td>
-                                            <td>{{song.rating}}</td>
-            
+                                            <td>Album</td>
+                                            <td>{{song.albumName}}</td>
                                         </tr>
                                         <tr>
-                                            <td>Release Date</td>
-                                            <td>{{song.releaseDate | date}}</td>
-                                        </tr>
+                                            <td>Region</td>
+                                            <td>{{song.region}}</td>
+                                            </tr>
                                     </tbody>
                                 </table>
                             </div>
@@ -111,9 +53,7 @@
                 <div>
                     <div class="container">
                         <div class="container-audio" style="width:80%; float:left; margin-left:10%">
-                            <audio controls loop autoplay>
-                                <source src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/9473/new_year_dubstep_minimix.ogg"
-                                    type="audio/ogg">
+                            <audio controls loop autoplay src="{{ song.songUrl }}">
                                 Your browser dose not Support the audio Tag
                             </audio>
                         </div>
@@ -130,4 +70,3 @@
                     </div>
                 </div>
 </div>
-<!---------------------------------------------------------------------------------------------------------------------->
