--- a/src/app/music/album-details/album-details.component.html
+++ b/src/app/music/album-details/album-details.component.html
@@ -98,6 +98,7 @@
                         </table>
                     </div>
                 </div>
+                <div class="btn btn-danger" (click)="addToFavourite(song.songId)">Add to favourites</div>
             </div>
         </div>
 
