--- a/src/app/user/user-favourites-list-details/user-favourites-list-details.component.html
+++ b/src/app/user/user-favourites-list-details/user-favourites-list-details.component.html
@@ -65,7 +65,7 @@
 <div  style="background-color: lightcyan">
         <div class="container" style="width: 85%;margin: 0 auto;">
                 <h4 style="color:rgb(46, 15, 15);text-align:center; font-size: -webkit-xxx-large; margin: 0">
-                    Chanson
+                    {{song.songTitle}}
                 </h4>
             </div>
             
@@ -108,7 +108,7 @@
                                 </table>
                             </div>
                         </div>
-                        <div class="btn btn-danger" (click)="addToFavourite(song.songId)">Add to favourites</div>
+                        <div class="btn btn-danger" (click)="deleteFavourite(song.songId)">Delete favourites</div>
                     </div>
                 </div>
             
