user favourite added

--- a/src/app/music/artist-details/artist-details.component.html
+++ b/src/app/music/artist-details/artist-details.component.html
@@ -18,6 +18,9 @@
 
 
     <h5 style="color: aliceblue; font-size: 40px; margin-left: 350px;padding-top: 5px">KAKAKI MUSIC APP
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+         {{user.userFirstName}}   
         <button type="button" class="btn btn-default btn-sm" style="float: right; padding: 10px">
             <span (click)="logout()" class="glyphicon glyphicon-log-out"> Logout</span>
         </button>
