--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -7,7 +7,7 @@
     <a routerLink="/allalbums"><i class="lnr lnr-indent-increase"></i> &nbsp; Albums</a>
     <a routerLink="/allartists"><i class="lnr lnr-users"></i> &nbsp; Artists</a>
     <a routerLink="/favourites"><i class="lnr lnr-heart"></i> &nbsp; My Fav</a>
-    <a href="#" data-toggle="modal" data-target="#myModal"><i class="lnr lnr-pencil"></i> &nbsp; Feedback</a>
+    <a routerLink="/userdetails"><i class="lnr lnr-pencil"></i> &nbsp; Feedback</a>
 
 </div>
 
@@ -82,7 +82,7 @@
 
                         <img src="assets/images/11.jpg" class="img-responsive" alt="">
                         <div class="carousel-caption">
-                            <a class="trend" href="single.html">TRENDING</a>
+                            <a class="trend" routerLink="/allalbums">TRENDING</a>
                             <h3>Let Your Home</h3>
                             <p>Album by <span>Rock star</span></p>
                         </div>
@@ -91,7 +91,7 @@
                     <div class="item">
                         <img src="assets/images/22.jpg" class="img-responsive" alt="">
                         <div class="carousel-caption">
-                            <a class="trend" href="single.html">TRENDING</a>
+                            <a class="trend" routerLink="/allalbums">TRENDING</a>
                             <h3>Let Your Home</h3>
                             <p>Album by <span>Rock star</span></p>
                         </div>
@@ -102,7 +102,7 @@
                     <div class="item">
                         <img src="assets/images/33.jpg" class="img-responsive" alt="">
                         <div class="carousel-caption">
-                            <a class="trend" href="single.html">TRENDING</a>
+                            <a class="trend" routerLink="/allalbums">TRENDING</a>
                             <h3>Let Your Home</h3>
                             <p>Album by <span>Rock star</span></p>
                         </div>
@@ -123,130 +123,135 @@
             <div class="albums">
                 <div class="tittle-head">
                     <h3 class="tittle">New Releases <span class="new">New</span></h3>
-                    <a href="index.html">
+                    <a routerLink="/allalbums">
                         <h4 class="tittle">See all</h4>
                     </a>
                     <div class="clearfix"> </div>
                 </div>
                 <div class="col-md-3 content-grid">
-                    <a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="assets/images/v1.jpg"
+                    <a class="play-icon popup-with-zoom-anim" routerLink="/allalbums"><img src="assets/images/v1.jpg"
                             title="allbum-name"></a>
-                    <a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Listen now</a>
+                    <a class="button play-icon popup-with-zoom-anim" routerLink="/allalbums">Listen now</a>
                 </div>
 
                 <div class="col-md-3 content-grid">
-                    <a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="assets/images/v2.jpg"
+                    <a class="play-icon popup-with-zoom-anim" routerLink="#small-dialog"><img src="assets/images/v2.jpg"
                             title="allbum-name"></a>
 
-                    <a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Listen now</a>
+                    <a class="button play-icon popup-with-zoom-anim" routerLink="/allalbums">Listen now</a>
                 </div>
                 <div class="col-md-3 content-grid">
-                    <a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="assets/images/v3.jpg"
+                    <a class="play-icon popup-with-zoom-anim" routerLink="/allalbums"><img src="assets/images/v3.jpg"
                             title="allbum-name"></a>
 
-                    <a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Listen now</a>
+                    <a class="button play-icon popup-with-zoom-anim" routerLink="/allalbums">Listen now</a>
                 </div>
                 <div class="col-md-3 content-grid last-grid">
-                    <a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="assets/images/v4.jpg"
+                    <a class="play-icon popup-with-zoom-anim" routerLink="/allalbums"><img src="assets/images/v4.jpg"
                             title="allbum-name"></a>
 
-                    <a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Listen now</a>
+                    <a class="button play-icon popup-with-zoom-anim" routerLink="/allalbums">Listen now</a>
                 </div>
                 <div class="col-md-3 content-grid">
-                    <a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="assets/images/v5.jpg"
+                    <a class="play-icon popup-with-zoom-anim" routerLink="/allalbums"><img src="assets/images/v5.jpg"
                             title="allbum-name"></a>
 
-                    <a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Listen now</a>
+                    <a class="button play-icon popup-with-zoom-anim" routerLink="/allalbums">Listen now</a>
                 </div>
 
                 <div class="col-md-3 content-grid">
-                    <a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="assets/images/v6.jpg"
+                    <a class="play-icon popup-with-zoom-anim" routerLink="/allalbums"><img src="assets/images/v6.jpg"
                             title="allbum-name"></a>
 
-                    <a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Listen now</a>
+                    <a class="button play-icon popup-with-zoom-anim" routerLink="#small-dialog">Listen now</a>
                 </div>
+             
                 <div class="col-md-3 content-grid">
-                    <a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="assets/images/v7.jpg"
+                    <a class="play-icon popup-with-zoom-anim" routerLink="/allalbums"><img src="assets/images/v7.jpg"
                             title="allbum-name"></a>
 
-                    <a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Listen now</a>
+                    <a class="button play-icon popup-with-zoom-anim" routerLink="#small-dialog">Listen now</a>
                 </div>
-                <div class="col-md-3 content-grid last-grid">
-                    <a class="play-icon popup-with-zoom-anim" href="#small-dialog"><img src="assets/images/v8.jpg"
+
+                <div class="col-md-3 content-grid">
+                    <a class="play-icon popup-with-zoom-anim" routerLink="/allalbums"><img src="assets/images/v8.jpg"
                             title="allbum-name"></a>
-                    <a class="button play-icon popup-with-zoom-anim" href="#small-dialog">Listen now</a>
+
+                    <a class="button play-icon popup-with-zoom-anim" routerLink="#small-dialog">Listen now</a>
                 </div>
+
+                <div class="col-md-3 content-grid">
+                    <a class="play-icon popup-with-zoom-anim" routerLink="/allalbums"><img src="assets/images/v9.jpg"
+                            title="allbum-name"></a>
+
+                    <a class="button play-icon popup-with-zoom-anim" routerLink="#small-dialog">Listen now</a>
+                </div>
+             
+           
                 <div class="clearfix"> </div>
             </div>
 
 
 
-            <div class="albums second">
-                <div class="tittle-head">
-                    <h3 class="tittle">Discover <span class="new">View</span></h3>
-                    <a href="index.html">
-                        <h4 class="tittle two">See all</h4>
-                    </a>
-                    <div class="clearfix"> </div>
-                </div>
-                <div class="col-md-3 content-grid">
-                    <a href="single.html"><img src="assets/images/v11.jpg" title="allbum-name"></a>
-                    <div class="inner-info"><a href="single.html">
-                            <h5>Pop</h5>
-                        </a></div>
-                </div>
-                <div class="col-md-3 content-grid">
-                    <a href="single.html"><img src="assets/images/v22.jpg" title="allbum-name"></a>
-                    <div class="inner-info"><a href="single.html">
-                            <h5>Pop</h5>
-                        </a></div>
-                </div>
-                <div class="col-md-3 content-grid">
-                    <a href="single.html"><img src="assets/images/v33.jpg" title="allbum-name"></a>
-                    <div class="inner-info"><a href="single.html">
-                            <h5>Pop</h5>
-                        </a></div>
-                </div>
-                <div class="col-md-3 content-grid last-grid">
-                    <a href="single.html"><img src="assets/images/v44.jpg" title="allbum-name"></a>
-                    <div class="inner-info"><a href="single.html">
-                            <h5>Pop</h5>
-                        </a></div>
-                </div>
-                <div class="col-md-3 content-grid">
-                    <a href="single.html"><img src="assets/images/v55.jpg" title="allbum-name"></a>
-                    <div class="inner-info"><a href="single.html">
-                            <h5>Pop</h5>
-                        </a></div>
-                </div>
-                <div class="col-md-3 content-grid">
-                    <a href="single.html"><img src="assets/images/v66.jpg" title="allbum-name"></a>
-                    <div class="inner-info"><a href="single.html">
-                            <h5>Pop</h5>
-                        </a></div>
-                </div>
-                <div class="col-md-3 content-grid">
-                    <a href="single.html"><img src="assets/images/v11.jpg" title="allbum-name"></a>
-                    <div class="inner-info"><a href="single.html">
-                            <h5>Pop</h5>
-                        </a></div>
-                </div>
-                <div class="col-md-3 content-grid last-grid">
-                    <a href="single.html"><img src="assets/images/v22.jpg" title="allbum-name"></a>
-                    <div class="inner-info"><a href="single.html">
-                            <h5>Pop</h5>
-                        </a></div>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
+            
 
 
 
         </div>
+        <div class="music-right" style="margin-bottom:  80px">
+
+            
+            <div class="apps" style="margin-top: -1px; margin-bottom: 20px">
+              <img class="img-responsive" src="assets/images/mobile.png">
+            </div>
+            <div><img class="img-responsive" src="assets/images/mob.png">
+            </div>
+
+
+
+
+        </div>
+            
+
+       
+        <br>
+        <br>
+        <br>
+        <br>
+        <br><br>
+        <div class="container-audio" style="margin-top: -60px; margin-left: 30px" >
+            <div class="colum1">
+                <div class="row"></div>
+            </div>
+            <div class="colum1">
+                <div class="row"></div>
+            </div>
+            <div class="colum1">
+                <div class="row"></div>
+            </div>
+            <div class="colum1">
+                <div class="row"></div>
+            </div>
+            <div class="colum1">
+                <div class="row"></div>
+            </div>
+            <div class="colum1">
+                <div class="row"></div>
+            </div>
+            <div class="colum1">
+                <div class="row"></div>
+            </div>
+
+      
+      </div>
+      
+  
+
+
+
 
         <div class="review-slider">
             <div class="tittle-head">
-                <h3 class="tittle">Featured Albums <span class="new"> New</span></h3>
                 <div class="clearfix"> </div>
             </div>
             <div class="nbs-flexisel-container">
@@ -260,86 +265,86 @@
 
 
                         <li class="nbs-flexisel-item" style="width: 43px;">
-                            <a href="single.html"><img src="assets/images/v1.jpg" alt=""></a>
+                            <a routerLink="/allartists"><img src="assets/images/v1.jpg" alt=""></a>
                             <div class="slide-title">
                                 <h4>Adele21 </h4>
                             </div>
                             <div class="date-city">
                                 <h5>Jan-02-16</h5>
                                 <div class="buy-tickets">
-                                    <a href="single.html">READ MORE</a>
+                                    <a routerLink="/allartists">READ MORE</a>
                                 </div>
                             </div>
                         </li>
                         <li class="nbs-flexisel-item" style="width: 43px;">
-                            <a href="single.html"><img src="assets/images/v2.jpg" alt=""></a>
+                            <a routerLink="/allartists"><img src="assets/images/v2.jpg" alt=""></a>
                             <div class="slide-title">
                                 <h4>Adele21</h4>
                             </div>
                             <div class="date-city">
                                 <h5>Jan-02-16</h5>
                                 <div class="buy-tickets">
-                                    <a href="single.html">READ MORE</a>
+                                    <a routerLink="/allartists">READ MORE</a>
                                 </div>
                             </div>
                         </li>
                         <li class="nbs-flexisel-item" style="width: 43px;">
-                            <a href="single.html"><img src="assets/images/v3.jpg" alt=""></a>
+                            <a routerLink="/allartists"><img src="assets/images/v3.jpg" alt=""></a>
                             <div class="slide-title">
                                 <h4>Shomlock</h4>
                             </div>
                             <div class="date-city">
                                 <h5>Jan-02-16</h5>
                                 <div class="buy-tickets">
-                                    <a href="single.html">READ MORE</a>
+                                    <a routerLink="/allartists">READ MORE</a>
                                 </div>
                             </div>
                         </li>
                         <li class="nbs-flexisel-item" style="width: 43px;">
-                            <a href="single.html"><img src="assets/images/v4.jpg" alt=""></a>
+                            <a routerLink="/allartists"><img src="assets/images/v4.jpg" alt=""></a>
                             <div class="slide-title">
                                 <h4>Stuck on a feeling</h4>
                             </div>
                             <div class="date-city">
                                 <h5>Jan-02-16</h5>
                                 <div class="buy-tickets">
-                                    <a href="single.html">READ MORE</a>
+                                    <a routerLink="/allartists">READ MORE</a>
                                 </div>
                             </div>
                         </li>
                         <li class="nbs-flexisel-item" style="width: 43px;">
-                            <a href="single.html"><img src="assets/images/v5.jpg" alt=""></a>
+                            <a routerLink="/allartists"><img src="assets/images/v5.jpg" alt=""></a>
                             <div class="slide-title">
                                 <h4>Ricky Martine </h4>
                             </div>
                             <div class="date-city">
                                 <h5>Jan-02-16</h5>
                                 <div class="buy-tickets">
-                                    <a href="single.html">READ MORE</a>
+                                    <a routerLink="/allartists">READ MORE</a>
                                 </div>
                             </div>
                         </li>
                         <li class="nbs-flexisel-item" style="width: 43px;">
-                            <a href="single.html"><img src="assets/images/v6.jpg" alt=""></a>
+                            <a href="/allartists"><img src="assets/images/v6.jpg" alt=""></a>
                             <div class="slide-title">
                                 <h4>Ellie Goluding </h4>
                             </div>
                             <div class="date-city">
                                 <h5>Jan-02-16</h5>
                                 <div class="buy-tickets">
-                                    <a href="single.html">READ MORE</a>
+                                    <a routerLink="/allartists">READ MORE</a>
                                 </div>
                             </div>
                         </li>
                         <li class="nbs-flexisel-item" style="width: 43px;">
-                            <a href="single.html"><img src="assets/images/v6.jpeg" alt=""></a>
+                            <a routerLink="/allartists"><img src="assets/images/v6.jpeg" alt=""></a>
                             <div class="slide-title">
                                 <h4>Fifty Shades </h4>
                             </div>
                             <div class="date-city">
                                 <h5>Jan-02-16</h5>
                                 <div class="buy-tickets">
-                                    <a href="single.html">READ MORE</a>
+                                    <a routerLink="/allartists">READ MORE</a>
                                 </div>
                             </div>
 
