--- a/src/app/music/all-albums/all-albums.component.html
+++ b/src/app/music/all-albums/all-albums.component.html
@@ -18,6 +18,9 @@
 
 
   <h5 style="color: aliceblue; font-size: 40px; margin-left: 350px;padding-top: 5px">KAKAKI MUSIC APP
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+         {{user.userFirstName}}   
       <button type="button" class="btn btn-default btn-sm" style="float: right; padding: 10px">
           <span  class="glyphicon glyphicon-log-out" (click)="logout()"> Logout</span>
       </button>
@@ -74,8 +77,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2 browse-grid" *ngFor="let album of albums">
-                    <a routerLink="/albumdetails/{{album.albumId}}"><img src="{{ album.albumImage }}" class="img-responsive" width="100px"
-                            height="100px"></a>
+                    <a routerLink="/albumdetails/{{album.albumId}}"><img src="{{ album.albumImage }}" style="width: 143px;height: 198px"></a>
                     <a routerLink="/albumdetails/{{album.albumId}}"><i class="glyphicon glyphicon-play-circle"></i></a>
                     <a class="sing" routerLink="/albumdetails/{{album.albumId}}">{{ album.albumName }}</a>
                 </div>
