--- a/src/app/music/all-artists/all-artists.component.html
+++ b/src/app/music/all-artists/all-artists.component.html
@@ -18,6 +18,9 @@
 
 
     <h5 style="color: aliceblue; font-size: 40px; margin-left: 350px;padding-top: 5px">KAKAKI MUSIC APP
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+         {{user.userFirstName}}   
         <button type="button" class="btn btn-default btn-sm" style="float: right; padding: 10px">
             <span (click)="logout()" class="glyphicon glyphicon-log-out"> Logout</span>
         </button>
@@ -76,7 +79,7 @@
             <div class="row">
                 <div class="col-md-2 browse-grid" *ngFor="let artist of artists">
                     <a routerLink="/artistdetails/{{artist.artistId}}"><img src="{{ artist.artistImage }}"
-                            class="img-responsive" width="100px" height="100px"></a>
+                            class="img-responsive" style="width: 143px;height: 198px"></a>
                     <a routerLink="/artistdetails/{{artist.artistId}}"><i
                             class="glyphicon glyphicon-play-circle"></i></a>
                     <a class="sing" routerLink="/artistdetails/{{artist.artistId}}">{{ artist.artistName }}</a>
