--- a/src/app/music/all-songs/all-songs.component.html
+++ b/src/app/music/all-songs/all-songs.component.html
@@ -18,6 +18,9 @@
 
 
     <h5 style="color: aliceblue; font-size: 40px; margin-left: 350px;padding-top: 5px">KAKAKI MUSIC APP
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+         {{user.userFirstName}}   
         <button type="button" class="btn btn-default btn-sm" style="float: right; padding: 10px">
             <span (click)="logout()" class="glyphicon glyphicon-log-out"> Logout</span>
         </button>
@@ -73,7 +76,7 @@
         <div class="container" >
             <div class="row">
                 <div class="col-md-2 browse-grid sngs" *ngFor="let song of songs" >
-                    <a routerLink="/songdetails/{{ song.songId }}" style="display: inline-block"><img src="{{ song.songImage }}" class="img-responsive" width="100px" height="100px"></a>
+                    <a routerLink="/songdetails/{{ song.songId }}" style="display: inline-block"><img src="{{ song.songImage }}" class="img-responsive" style="width: 143px;height: 198px"></a>
                     <a routerLink="/songdetails/{{ song.songId }}"><i class="glyphicon glyphicon-play-circle"></i></a>
                     <a class="sing" routerLink="/songdetails/{{ song.songId }}">{{ song.songTitle }}</a>
                 </div>
