--- a/src/app/user/user-details/user-details.component.html
+++ b/src/app/user/user-details/user-details.component.html
@@ -18,6 +18,9 @@
 
 
     <h5 style="color: aliceblue; font-size: 40px; margin-left: 350px;padding-top: 5px">KAKAKI MUSIC APP
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+         {{user.userFirstName}}   
         <button type="button" class="btn btn-default btn-sm" style="float: right; padding: 10px">
             <span (click)="logout()" class="glyphicon glyphicon-log-out"> Logout</span>
         </button>
@@ -99,7 +102,7 @@
                 </table>
             </div>
             <div class="text-center">
-                    <a routerLink="/user/:userId" class="btn btn-primary">Edit Profile</a>
+                    <a routerLink="/user" class="btn btn-primary">Edit Profile</a>
             </div>
         </div>
     </div>
