--- a/src/app/user/user-details/user-details.component.html
+++ b/src/app/user/user-details/user-details.component.html
@@ -102,7 +102,7 @@
                 </table>
             </div>
             <div class="text-center">
-                    <a routerLink="/user" class="btn btn-primary">Edit Profile</a>
+                    <a routerLink="/edit-profile" class="btn btn-primary">Edit Profile</a>
             </div>
         </div>
     </div>
