--- a/src/app/music/artist-details/artist-details.component.html
+++ b/src/app/music/artist-details/artist-details.component.html
@@ -69,7 +69,7 @@
 <div style="background-color: lightcyan">
     <div class="container">
         <h4 style="color:rgb(46, 15, 15);text-align:center; font-size: -webkit-xxx-large">
-            Chanson
+            {{song.songTitle}}
         </h4>
     </div>
 
