--- a/src/app/user/user-favourites-list/user-favourites-list.component.html
+++ b/src/app/user/user-favourites-list/user-favourites-list.component.html
@@ -77,8 +77,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2 browse-grid" *ngFor="let song of songs">
-                    <a routerLink="/favourites/{{song.songId}}"><img src="{{ song.songImage }}" class="img-responsive" width="100px"
-                            height="100px"></a>
+                    <a routerLink="/favourites/{{song.songId}}"><img src="{{ song.songImage }}" class="img-responsive" style="width: 143px;height: 198px"></a>
                     <a routerLink="/favourites/{{song.songId}}"><i class="glyphicon glyphicon-play-circle"></i></a>
                     <a class="sing" routerLink="/favourites/{{song.songId}}">{{ song.songTitle }}</a>
                 </div>
