--- a/src/app/user/user-forget-password/user-forget-password.component.html
+++ b/src/app/user/user-forget-password/user-forget-password.component.html
@@ -19,6 +19,24 @@
                           <input id="email" name="email" placeholder="email address" class="form-control"  type="email">
                         </div>
                       </div>
+
+                      <div class="form-group">
+                        <select class="form-control" name="question" formControlName="question"
+                                        [class.is-invalid]="question.touched && question.invalid" required="question"
+                                        [(ngModel)]="user.securityQuestion">
+                                        <option value="">---Select your security question---</option>
+                                        <option value="What is your pet name?">What is your pet name?</option>
+                                        <option value="What is your nationality?">What is your nationality?</option>
+                                        <option value="What is your mother's maiden name?">What is your mother's maiden
+                                                name?</option>
+                                        <option value="What is your first school name?">What is your first school name?
+                                        </option>
+                                        <option value="What is your father's middle name?">What is your father's middle
+                                                name?</option>
+
+                                </select>
+                      </div>
+
                       <div class="form-group">
                         <input name="recover-submit" routerLink="/signin/*" class="btn btn-lg btn-primary btn-block" style="background-color:#FFC312; border: 1px solid #FFC312;" value="Reset Password" type="submit">
  
