--- a/src/app/admin/admin-user-details/admin-user-details.component.html
+++ b/src/app/admin/admin-user-details/admin-user-details.component.html
@@ -35,7 +35,7 @@
 <div style="background-color: lightcyan">
     <div class="container">
         <h4 style="color:rgb(46, 15, 15);text-align:center; font-size: -webkit-xxx-large">
-            {{song.songTitle}}
+            User Details
         </h4>
     </div>
 
@@ -46,47 +46,39 @@
 
             </div>
             <div class="card-body">
-                <div class="row">
-                    <div class="col-md-6 text-center">
-                        <div class="text-center">
-                            <img src="{{ artist.artistImage }}" class="img-responsive" width="350px" height="110%">
-                            <br><br>
-
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <table class="table table-bordered">
-                            <tbody>
-                                <tr>
-                                    <td>Artist Name</td>
-                                    <td>{{artist.artistName}}</td>
-
-                                </tr>
-
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <div class="btn btn-danger" (click)="addToFavourite(song.songId)">Add to favourites</div>
-            </div>
-        </div>
-
-        <div>
-            <div class="container">
-                <div class="container-audio" style="width:80%; float:left; margin-left:10%">
-                    <audio controls loop autoplay src="{{ song.songUrl }}">
-                        Your browser dose not Support the audio Tag
-                    </audio>
-                </div>
-            </div>
-            <br>
-            <div class="container" style="color:black">
-                <div class="list-group text-center" style="margin-left:57px">
-
-                    <div *ngFor="let song of artist.songs">
-                        <a (click)="play(song)" class="list-group-item list-group-item-action list-group-item-dark">{{ song.songTitle }}</a>
-                    </div>
-                </div>
+                <table class="table table-bordered">
+                    <tbody>
+                    <tr>
+                            <td>User Name</td>
+                            <td>{{user.userName}}</td>
+                        </tr>
+                        <tr>
+                            <td>User First Name</td>
+                            <td>{{user.userFirstName}}</td>
+                        </tr>
+                        <tr>
+                            <td>User Last Name</td>
+                            <td>{{user.userLastName}}</td>
+                        </tr>
+                        <tr>
+                            <td>User Email</td>
+                            <td>{{user.userEmail}}</td>
+                        </tr>
+                        <tr>
+                            <td>User Contact Number</td>
+                            <td>{{user.userContactNumber}}</td>
+                        </tr>
+                        <tr>
+                            <td>User Security Question</td>
+                            <td>{{user.securityQuestion}}</td>
+                        </tr>
+                        <tr>
+                            <td>User Security Answer</td>
+                            <td>{{user.securityAnswer}}</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
+</div>
