--- a/src/app/admin/admin-user/admin-user.component.html
+++ b/src/app/admin/admin-user/admin-user.component.html
@@ -1,15 +1,49 @@
+<!-- ------------------------------left side bar start-- --------------------------->
+<div id="mySidenav" class="sidenav" style="margin-top: 10px">
+    <a href="javascript:void(0)" class="closebtn" (click)="cNav()">&times;</a>
+
+    <a routerLink="/home"><i class="lnr lnr-home"></i> &nbsp; Home</a>
+    <a routerLink="/allsongs"> <i class="lnr lnr-music-note"></i> &nbsp; All Songs</a>
+    <a routerLink="/allalbums"><i class="lnr lnr-indent-increase"></i> &nbsp; Albums</a>
+    <a routerLink="/allartists"><i class="lnr lnr-users"></i> &nbsp; Artists</a>
+    <a routerLink="/favourites"><i class="lnr lnr-heart"></i> &nbsp; My Fav</a>
+    <a routerLink="/userdetails"><i class="lnr lnr-pencil"></i> &nbsp; User Profile</a>
+    <a routerLink="/adminhome" class="adminbtn" id="adminbutton"><i class="lnr lnr-apartment"></i> &nbsp;Admin Home</a>
+
+</div>
+
+<div style="background-color: black; height: 50px;">
+    <span style="font-size:25px;cursor:pointer;padding-top: 10px; color: aliceblue; float: left;"
+        (click)="oNav()">&#9776; Menu
+    </span>
+
+
+    <h5 style="color: aliceblue; font-size: 40px; margin-left: 350px;padding-top: 5px">KAKAKI MUSIC APP
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        {{user1.userFirstName}}
+        <button type="button" class="btn btn-default btn-sm" style="float: right; padding: 10px">
+            <span class="glyphicon glyphicon-log-out" (click)="logout()"> Logout</span>
+        </button>
+    </h5>
+</div>
+
+
+<!-- side bar enddd ----------------------------------------------------------------------------------------------------------   -->
+
+
 <div class="container">
 
-    <h4 style="background-color: black; color:white ; text-align: center;font-size: 40px">All Users</h4>
+    <h4 style="color:black ; text-align: center;font-size: 40px">All Users</h4>
     <table class="table table-bordered">
 
         <thead>
 
             <tr>
 
-                <th style="text-align: center">User Id</th>
+                <th style="text-align: center">User FirstName</th>
 
-                <th style="text-align: center">User Name</th>
+                <th style="text-align: center">User Email</th>
 
                 <th style="text-align: center"></th>
 
@@ -19,22 +53,19 @@
 
         <tbody>
 
-            <tr *ngFor= "let AdminUser of adminUser">
+            <tr *ngFor="let user of user">
 
+
+                <td>{{user.userFirstName}}</td>
+
+                <td>{{user.userEmail}}</td>
                 <td>
-                    <a routerLink="/admin-user"></a>
-                </td>
 
-                <td>{{AdminUser.userFirstName}}</td>
 
-                <td>{{AdminUser.userName}}</td>
-                <td>
-                
-               
-                     <button type="button" class="btn btn-block" style="background-color: #ff9f00; width: 40%; display: block; margin: 0 auto">View Details</button>
-                    <br>
+                    <button type="button" routerLink="/adminuserdetails/{{user.userEmail}}" class="btn btn-block"
+                        style="background-color: #ff9f00; width: 40%; display: block; margin: 0 auto">View
+                        Details</button>
 
-                    <button type="button" class="btn btn-block" style="background-color: #fb641b; width: 40%; display: block; margin: 0 auto">Home</button>
                 </td>
 
             </tr>
@@ -44,6 +75,3 @@
     </table>
 
 </div>
-
-
-
