--- a/src/app/music/artist-details/artist-details.component.css
+++ b/src/app/music/artist-details/artist-details.component.css
@@ -322,3 +322,6 @@ audio:nth-child(2), audio:nth-child(4), audio:nth-child(6) {
   }
 
 /* nav bar css end */
+.sidenav .adminbtn{
+    display: none;
+  }
