--- a/src/app/music/song-details/song-details.component.css
+++ b/src/app/music/song-details/song-details.component.css
@@ -323,3 +323,6 @@ audio:nth-child(2), audio:nth-child(4), audio:nth-child(6) {
   }
 
 /* nav bar css end */
+.sidenav .adminbtn{
+    display: none;
+  }
