modify main page

--- a/src/app/user/user-forget-password/user-forget-password.component.html
+++ b/src/app/user/user-forget-password/user-forget-password.component.html
@@ -1,55 +1,43 @@
 <img src="assets/images/loginimage.jpg" height="789px" width=" 1440px" style="position: absolute">
 <div class="form-gap"></div>
 <div class="container">
-	<div class="row">
-		<div class="col-md-4 col-md-offset-4">
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <div class="text-center">
-                  <h3><i class="fa fa-lock fa-4x"></i></h3>
-                  <h2 class="text-center">Forgot Password?</h2>
-                  <p>You can reset your password here.</p>
-                  <div class="panel-body">
-    
-                    <form id="register-form" role="form" autocomplete="off" class="form" method="post">
-    
-                      <div class="form-group">
-                        <div class="input-group">
-                          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
-                          <input id="email" name="email" placeholder="email address" class="form-control"  type="email">
-                        </div>
-                      </div>
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4">
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <div class="text-center">
+            <h3><i class="fa fa-lock fa-4x"></i></h3>
+            <h2 class="text-center">Forgot Password?</h2>
+            <p>You can reset your password here.</p>
+            <div class="panel-body">
 
-                      <div class="form-group">
-                        <select class="form-control" name="question" formControlName="question"
-                                        [class.is-invalid]="question.touched && question.invalid" required="question"
-                                        [(ngModel)]="user.securityQuestion">
-                                        <option value="">---Select your security question---</option>
-                                        <option value="What is your pet name?">What is your pet name?</option>
-                                        <option value="What is your nationality?">What is your nationality?</option>
-                                        <option value="What is your mother's maiden name?">What is your mother's maiden
-                                                name?</option>
-                                        <option value="What is your first school name?">What is your first school name?
-                                        </option>
-                                        <option value="What is your father's middle name?">What is your father's middle
-                                                name?</option>
+              <form id="register-form" role="form" autocomplete="off" class="form" method="post" (ngSubmit)="onSubmit()" >
 
-                                </select>
-                      </div>
-
-                      <div class="form-group">
-                        <input name="recover-submit" routerLink="/signin/*" class="btn btn-lg btn-primary btn-block" style="background-color:#FFC312; border: 1px solid #FFC312;" value="Reset Password" type="submit">
- 
-                        
-
-                   </div>
-                                            <input type="hidden" class="hide" name="token" id="token" value=""> 
-                    </form>
-   
+                <div class="form-group">
+                  <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
+                    <input id="email" name="email" placeholder="email address" class="form-control" type="email" [(ngModel)]="email" >
                   </div>
                 </div>
-              </div>
+
+
+
+
+
+                <div class="form-group">
+                  <input name="recover-submit"  class="btn btn-lg btn-primary btn-block"
+                    style="background-color:#FFC312; border: 1px solid #FFC312;" value="Reset Password" type="submit" >
+
+
+
+                </div>
+                <input type="hidden" class="hide" name="token" id="token" value="">
+              </form>
+
             </div>
           </div>
-	</div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
