upload coming soon added

--- a/src/app/admin/admin-upload-song/admin-upload-song.component.html
+++ b/src/app/admin/admin-upload-song/admin-upload-song.component.html
@@ -35,9 +35,9 @@
 
 <div class="container">
 
-    <h4 style="background-color: rgb(129, 104, 104); color:rgb(70, 95, 105) ; text-align: center;font-size: 40px">Create Artist</h4>
+    <h4 style="background-color: rgb(129, 104, 104); color:rgb(70, 95, 105) ; text-align: center;font-size: 40px">Upload Song</h4>
 
-    <form class="sl">
+    <form class="sl" (ngSubmit)="onSubmit()">
             <div class="form-group">
               <label for="songId">Song Id</label>
               <input type="number" class="form-control" id="songId"  placeholder="Enter SongId">
