--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -19,6 +19,9 @@
 
 
     <h5 style="color: aliceblue; font-size: 40px; margin-left: 350px;padding-top: 5px">KAKAKI MUSIC APP
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+         {{user.userFirstName}}   
         <button type="button" class="btn btn-default btn-sm" style="float: right; padding: 10px">
             <span routerLink="" class="glyphicon glyphicon-log-out"> Logout</span>
         </button>
@@ -30,6 +33,6 @@
 <img src="assets/images/adminimage.jpg" style="width:1440px; height:739px">
 
 <button class="button" routerLink="/admin-user">Users</button>
-<button class="button1" routerLink="/admin-create-album">Create Album</button>
-<button class="button2" routerLink="/admin-create-album">Upload Songs</button>
-<button class="button3" routerLink="/create-artist">Create Artist Album</button>
+<button class="button1" routerLink="/admin-create-album" (click)="onClick()">Create Album</button>
+<button class="button2" routerLink="/admin-upload-song" (click)="onClick()">Upload Songs</button>
+<button class="button3" routerLink="/create-artist" (click)="onClick()">Create Artist Album</button>
